@@ -60,6 +60,9 @@ C-API
 Library
 -------
 
+- Issue #6106: telnetlib.Telnet.process_rawq doesn't handle default WILL/WONT
+  DO/DONT correctly.
+
 - Issue #1424152: Fix for http.client, urllib.request to support SSL while
   working through proxy. Original patch by Christopher Li, changes made by
   Senthil Kumaran
